--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - Page Not Found{% endblock %}
+{% block title %}Erro {{ code }} - {{ name }}{% endblock %}
 
 {% block content %}
 <div class="flex flex-col items-center justify-center h-screen text-center">
-    <h1 class="text-8xl font-extrabold text-red-500 mb-4">404</h1>
-    <p class="text-2xl mb-6">Oops! A página que você procura não existe.</p>
+    <h1 class="text-8xl font-extrabold text-red-500 mb-4">Erro {{ code }} - {{ name }}</h1>
+    <p class="text-2xl mb-6">{{ description }}</p>
     <a href="{{ url_for('index') }}" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold px-6 py-3 rounded shadow">
         Voltar para a Home
     </a>
