--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,8 @@
     <title>{% block title %}Flask App{% endblock %}</title>
     <!-- Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 </head>
 <body class="bg-gray-100 text-gray-800">
     <div class="container mx-auto p-6">
