--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,5 +5,6 @@
 {% block content %}
 <div class="flex flex-col items-center h-screen">
     <h1>Hello World!</h1>
+    <p>A data e hora local são: {{ data_formatada }}.</p>
 </div>
 {% endblock %}
