--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,15 @@
 
 {% block content %}
 <div class="flex flex-col items-center h-screen">
-    <h1>Hello World!</h1>
+    <h1>Olá! {% if name %}{{ name }} {% else %} desconhecido {% endif %}</h1>
     <p>A data e hora local são: {{ data_formatada }}.</p>
+    <form method="POST" class="flex flex-col items-center gap-4 mt-6">
+    {{ form.hidden_tag() }}
+
+    <label for="name" class="text-lg font-medium">Qual seu nome?</label>
+    {{ form.name(class="border rounded-lg p-2 text-center") }}
+
+    {{ form.submit(class="bg-blue-600 text-white rounded-lg px-4 py-2 hover:bg-blue-700 cursor-pointer") }}
+</form>
 </div>
 {% endblock %}
