--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,12 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
     <div class="container mx-auto p-6">
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
         {% block content %}{% endblock %}
     </div>
 </body>
